Added a sectionfor Uganda

--- a/kenya.html
+++ b/kenya.html
@@ -3,13 +3,14 @@
 <head>
     <title>Tour the City</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
       <a href="kenya.html">Visit Kenya</a>
-      <a href="#">Visit Uganda</a>
+      <a href="uganda.html">Visit Uganda</a>
       <a href="index.html">Home</a> 
     </header>
     <section class="kenya">
@@ -50,7 +51,7 @@
     </section>
 
     <footer>
-      copyrights@code warriors 2020
+      copyrights@code warriors 2020.All rights reserved
     </footer>
 </body>
 </html>
